--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -22,7 +22,7 @@
 	<section id="contact" class="wrapper split">
 		<div class="inner">
 			<section>
-				<h2>Send us a message</h2>
+				<h2>Question? Send us a message</h2>
 				<form method="post" action="#">
 					<div class="row uniform">
 						<div class="6u 12u$(large) 6u(medium) 12u$(xsmall)">
@@ -40,7 +40,6 @@
 						<div class="12u$">
 							<ul class="actions">
 								<li><input type="submit" value="Send Message" class="special" /></li>
-								<li><input type="reset" value="Reset" /></li>
 							</ul>
 						</div>
 					</div>
@@ -52,35 +51,17 @@
 					<li>
 						<span class="icon-wrapper"><span class="icon fa-envelope"></span></span>
 						<h3>Email</h3>
-						<p><a href="#">information@untitled.tld</a></p>
+						<p><a href="mailto:hello@remotemovement.com">hello@remotemovement.com</a></p>
 					</li>
 					<li>
 						<span class="icon-wrapper"><span class="icon fa-twitter"></span></span>
 						<h3>Twitter</h3>
-						<p><a href="#">twitter.com/untitled-tld</a></p>
-					</li>
-					<li>
-						<span class="icon-wrapper"><span class="icon fa-phone"></span></span>
-						<h3>Phone</h3>
-						<p>(800) 555-0000</p>
+						<p><a href="https://twitter.com/remotemovement">twitter.com/remotemovement</a></p>
 					</li>
 					<li>
 						<span class="icon-wrapper"><span class="icon fa-facebook"></span></span>
 						<h3>Facebook</h3>
-						<p><a href="#">facebook.com/untitled-tld</a></p>
-					</li>
-					<li>
-						<span class="icon-wrapper"><span class="icon fa-home"></span></span>
-						<h3>Mailing Address</h3>
-						<p>1234 Fictional Avenue<br />
-						Nashville, TN 00000<br />
-						United States
-						</p>
-					</li>
-					<li>
-						<span class="icon-wrapper"><span class="icon fa-linkedin"></span></span>
-						<h3>LinkedIn</h3>
-						<p><a href="#">linkedin.com/untitled-tld</a></p>
+						<p><a href="https://facebook.com/remotemovement">facebook.com/remotemovement</a></p>
 					</li>
 				</ul>
 			</section>
@@ -90,11 +71,11 @@
 <!-- Footer -->
 	<footer id="footer">
 		<div class="inner">
-			<p class="copyright">&copy; Untitled Corp. All rights reserved. Lorem ipsum dolor sit amet feugiat tempus aliquam.</p>
+			<p class="copyright">{{ site.title }} {{ site.tagline }}</p>
 			<ul class="menu">
-				<li><a href="#">Terms<span> of Use</span></a></li>
-				<li><a href="#">Privacy<span> Policy</span></a></li>
-				<li><a href="#">Legal<span> Information</span></a></li>
+				<li><a>Terms<span> of Use</span></a></li>
+				<li><a>Privacy<span> Policy</span></a></li>
+				<li><a>Legal<span> Information</span></a></li>
 			</ul>
 		</div>
 	</footer>
