--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -28,26 +28,9 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="{{ site.baseurl }}/">Home</a></li>
-				<li>
-					<a href="#" class="submenu fa-angle-down">Page Layouts</a>
-					<ul>
-						<li><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="{{ site.baseurl }}/right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="{{ site.baseurl }}/no-sidebar.html">No Sidebar</a></li>
-						<li>
-							<a href="#">Submenu</a>
-							<ul>
-								<li><a href="#">Option One</a></li>
-								<li><a href="#">Option Two</a></li>
-								<li><a href="#">Option Three</a></li>
-								<li><a href="#">Option Four</a></li>
-							</ul>
-						</li>
-					</ul>
-				</li>
+				<li><a href="{{ site.baseurl }}/blog">Upcoming courses</a></li>
 				<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-				<li><a href="{{ site.baseurl }}/elements.html">Elements</a></li>
-				<li><a href="#" class="button">Sign Up</a></li>
+				<li><a href="#" class="button">Start now</a></li>
 			</ul>
 		</nav>
 	</header>
