--- a/_includes/layout/sidebar.html
+++ b/_includes/layout/sidebar.html
@@ -22,22 +22,22 @@
 	<div class="sidebar">
 
 		<section>
-			<h3>Magna Feugiat</h3>
-			<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+			<h3>Can your job be remote?</h3>
+			<p>Not every job can be done remotely. We created a quiz where you can check if your job can be done remotely.</p>
 			<footer>
 				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a class="button">Do the quiz</a></li>
 				</ul>
 			</footer>
 		</section>
 		<hr />
 		<section>
 			<a href="#" class="image fit"><img src="{{ site.baseurl }}/images/pic01.jpg" alt="" /></a>
-			<h3>Amet Lorem Tempus</h3>
-			<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+			<h3>Why did you start the remote movement</h3>
+			<p>Because we found quite some hurdles with starting to work remotely and got so much information on how to do this, we thought, why not share this with other people and help them work remote.</p>
 			<footer>
 				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="#" class="button">Read more about our why</a></li>
 				</ul>
 			</footer>
 		</section>
