--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -27,7 +27,7 @@ layout: default
 {% endcomment %}
 
 <!-- Main -->
-	<section id="main" class="wrapper sidebar {{ page.sidebar_align | default: 'left' }}">
+	<section id="main" class="wrapper sidebar {{ page.sidebar_align | default: 'right' }}">
 		<div class="inner">
 
 			<!-- Content -->
