Link header item to courses page

--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -28,7 +28,7 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="{{ site.baseurl }}/">Home</a></li>
-				<li><a href="{{ site.baseurl }}/blog">Upcoming courses</a></li>
+				<li><a href="{{ site.baseurl }}/courses">Upcoming courses</a></li>
 				<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
 				<li><a href="#" class="button">Start now</a></li>
 			</ul>
