Link to quiz and add posts on homepage

--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -30,7 +30,7 @@
     <li><a href="{{ site.baseurl }}/">Home</a></li>
     <li><a href="{{ site.baseurl }}/courses">Upcoming courses</a></li>
     <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-    <li><a href="#" class="button">Start now</a></li>
+    <li><a href="/quiz" class="button">Start now</a></li>
    </ul>
   </nav>
  </header>
