--- a/_includes/layout/banner.html
+++ b/_includes/layout/banner.html
@@ -32,7 +32,7 @@
  <section id="banner">
   {% for slide in include.slides %}
    <article>
-    <img src="{{ site.baseurl }}{{ slide.image }}" alt="" />
+    <img src="{{ slide.image }}" alt="" />
     <div class="inner">
      <h2><a href="{{ slide.url }}">{{ slide.title }}</a></h2>
     </div>
