--- a/assets/sass/layout/_banner.scss
+++ b/assets/sass/layout/_banner.scss
@@ -90,6 +90,7 @@
 			visibility: hidden;
 			width: 100%;
 			z-index: 0;
+			@include vendor('filter', ('grayscale(1)'));
 
 			&:before {
 				content: '';
