Remove by Michael & Adriaan in the header

--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -23,7 +23,7 @@
 <!-- Header -->
  <header id="header" class="{{ include.class }}">
   <h1><a href="{{ site.baseurl }}/">
-   {{ site.title }} <span>{{ site.tagline }}</span>
+   {{ site.title }} <span style="text-transform: none;">.com</span>
   </a></h1>
   <nav id="nav">
    <ul>
