--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -29,6 +29,7 @@
    <ul>
     <li><a href="{{ site.baseurl }}/">Home</a></li>
     <li><a href="{{ site.baseurl }}/courses">Upcoming courses</a></li>
+    <li><a href="{{ site.baseurl }}/about">About us</a></li>
     <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
     <li><a href="/quiz" class="button">Start now</a></li>
    </ul>
