--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,5 +55,13 @@
    <!--[if lte IE 8]><script src="{{ site.baseurl }}/assets/js/ie/respond.min.js"></script><![endif]-->
    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-243569-45"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+    gtag('config', 'UA-243569-45');
+  </script>
  </body>
 </html>
