Meeting fixes of today

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -82,10 +82,10 @@ layout: sidebar
 </style>
 
 <form class="newsletter-form" method="post" action="#">
-  <h2>Question? Send us a message</h2>
+  <h2>Want exclusive access to articles like this?</h2>
   <p class="error">Oops, something is wrong...</p>
   <div>
     <input placeholder="yes, this is the email field" type="email" name="newsletter-email">
-    <a class="button" href="/quiz">{% if page.button %}{{ page.button }}{% else %}Get more remote articles!{% endif %}</a>
+    <a class="button" href="/quiz">{% if page.button %}{{ page.button }}{% else %}Yes, of course!{% endif %}</a>
   </div>
 </form>
