--- a/assets/sass/components/_section.scss
+++ b/assets/sass/components/_section.scss
@@ -18,7 +18,7 @@
 
 	header {
 		&.major {
-			margin: 0 0 (_size(element-margin) * 2) 0;
+			margin: 0 0 (_size(element-margin)) 0;
 
 			> :last-child {
 				margin-bottom: 0;
