--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,7 +56,14 @@ layout: sidebar
     background-color: #f6f6f6;
   }
   .newsletter-form input + input {
-    margin-left: 2em;
+    margin-top: 1em;
+    margin-right: auto;
+  }
+  @media (min-width: 480px) {
+    .newsletter-form input + input {
+      margin-left: 2em;
+      margin-top: 0;
+    }
   }
   .newsletter-form input:focus {
     border-color: #f6f6f6;
@@ -68,8 +75,13 @@ layout: sidebar
     color: black;
   }
   .newsletter-form div {
-    display: flex;
+    display: block;
     position: relative;
+  }
+  @media (min-width: 480px) {
+    .newsletter-form div {
+      display: flex;
+    }
   }
   .newsletter-form h2 {
     color: #f6f6f6;
