--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -1,45 +1,46 @@
-{% comment %}
-
- Slate by Pixelarity
- pixelarity.com | hello@pixelarity.com
- License: pixelarity.com/license
-
- Name:
-
-  Site footer
-
- Description:
-
-  Contact info, form, and footer.
-
- Example:
-
-  {% include layout/footer.html %}
-
-{% endcomment %}
+<style>
+.feedback {
+  margin-left: 5px;
+  opacity: 0;
+}
+.address {
+  display: none !important;
+}
+.required {
+  color: #de0303;
+}
+p.error {
+  display: none;
+  color: #de0303;
+  border: 1px solid #de0303;
+  padding: 5px 10px;
+}
+</style>
 
 <!-- Contact -->
  <section id="contact" class="wrapper split">
   <div class="inner">
    <section>
     <h2>Question? Send us a message</h2>
-    <form method="post" action="#">
+    <form class="contact" method="post">
+     <input type="text" class="address" />
+     <p class="error">This is an error</p>
      <div class="row uniform">
       <div class="6u 12u$(large) 6u(medium) 12u$(xsmall)">
-       <label for="name">Name</label>
-       <input type="text" name="name" id="name" />
+       <label for="name">Name <span class="required">*</span></label>
+       <input type="text" class="name" id="name" required="required" />
       </div>
       <div class="6u$ 12u$(large) 6u$(medium) 12u$(xsmall)">
-       <label for="email">Email</label>
-       <input type="email" name="email" id="email" />
+       <label for="email">Email <span class="required">*</span></label>
+       <input type="email" class="email" id="email" required="required" />
       </div>
       <div class="12u$">
-       <label for="message">Message</label>
-       <textarea name="message" id="message" rows="5"></textarea>
+       <label for="message">Message <span class="required">*</span></label>
+       <textarea class="message" id="message" rows="5"></textarea>
       </div>
       <div class="12u$">
        <ul class="actions">
-        <li><input type="submit" value="Send Message" class="special" /></li>
+        <li><input type="submit" value="Send Message" class="special" required="required" /> <span class="feedback">Thanks, we reply soon if needed!</span></li>
        </ul>
       </div>
      </div>
@@ -79,3 +80,54 @@
    </ul>
   </div>
  </footer>
+
+ <script>
+   var form = document.querySelector('form.contact');
+   function showError(message) {
+     var box = form.querySelector('.error');
+     if (message) {
+       box.innerHTML = message;
+       box.style.display = 'block';
+     }
+     else {
+       box.style.display = 'none';
+     }
+   }
+   function done() {
+     var thanks = form.querySelector('.feedback');
+     showError(null);
+     window.setTimeout(function() {
+       thanks.style.opacity = 1;
+     }, 100);
+     window.setTimeout(function() {
+       thanks.style.opacity = 0;
+     }, 5000);
+   }
+   function saveEmail(email, name, message) {
+     var subject = encodeURIComponent('Message for remotemovement.com');
+     var body = encodeURIComponent('Email: ' + email + '\nName: ' + name + '\n\n' + message);
+
+     // Send newsletter email to myself
+     var url = 'https://screenmessage.com/blog/mail.php?domain=remotemovement.com&subject=' + subject + '&message=' + body + '&from=' + encodeURIComponent(email);
+     var request = new XMLHttpRequest();
+     request.open('GET', url, true);
+     request.send();
+     done();
+   }
+   form.addEventListener('submit', function(event) {
+     event.preventDefault();
+
+     // For things that are not persons
+     var special = form.querySelector('input.address').value;
+     if (special) return;
+
+     var name = form.querySelector('input.name').value;
+     var email = form.querySelector('input.email').value;
+     var message = form.querySelector('textarea.message').value;
+     if (!name || name.trim() === '') return showError('Please fill in your name');
+     if (!message || message.trim() === '') return showError('Please fill in your message');
+     if (!email || email.trim() === '') return showError('Please fill in your email address');
+     if (email.indexOf('@') === -1 || email.indexOf('.') === -1) return showError('Please fill in a valid email address');
+     saveEmail(email.trim(), name.trim(), message.trim());
+   })
+ </script>
