Add Facebook group and remove legal links

--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -62,7 +62,7 @@ p.error {
      <li>
       <span class="icon-wrapper"><span class="icon fa-facebook"></span></span>
       <h3>Facebook</h3>
-      <p><a href="https://facebook.com/remotemovement">facebook.com/remotemovement</a></p>
+      <p><a href="https://www.facebook.com/groups/149174492481061">facebook.com/remotemovement</a></p>
      </li>
     </ul>
    </section>
@@ -73,11 +73,11 @@ p.error {
  <footer id="footer">
   <div class="inner">
    <p class="copyright">{{ site.title }} {{ site.tagline }}</p>
-   <ul class="menu">
+   <!--<ul class="menu">
     <li><a>Terms<span> of Use</span></a></li>
     <li><a>Privacy<span> Policy</span></a></li>
     <li><a>Legal<span> Information</span></a></li>
-   </ul>
+   </ul>-->
   </div>
  </footer>
 
