--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -126,7 +126,7 @@ layout: sidebar
     box.style.display = 'block';
   }
   function doneNewsletter() {
-    var thanks = form.querySelector('.thank-you');
+    var thanks = formNewsletter.querySelector('.thank-you');
     thanks.style.display = 'flex';
     window.setTimeout(function() {
       thanks.style.opacity = 1;
